--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
       "strictPropertyInitialization": false
     },
     "include": ["src/*.ts"], 
-    "exclude": ["dist", "node_modules", "build/*.js"]
+    "exclude": ["dist", "node_modules", "build/*.js, src/backups"]
   }
